# thicket

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yml  5955766.out  5955767.out  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  UPDATES.md  build_requirements.sh  codecov.yml  install.sh  license.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test.txt
.github/workflows/: build_and_upload_wheels.yaml  notebook-sync.yaml  pypi_build_and_upload.yaml  tutorials_sync.json  unit-tests.yaml
docs/: Makefile  analysis_examples.rst  concatenating_thickets.rst  conf.py  developer_guide.rst  environment.yml  examples.rst  extrap-with-metadata-aggregated.ipynb  generating_data.rst  getting_started.rst  groupby_aggregate.ipynb  index.rst  publications.rst  query_language.ipynb  requirements.txt  stats-functions.ipynb  test.md  thicket_properties.rst  thicket_rajaperf_clustering.ipynb  thicket_structures.rst  thicket_tutorial.ipynb  tutorial_materials.rst  unification.rst  user_guide.rst  vis_docs.rst
docs/_pygments/: style.py
docs/_static/: custom.css
docs/source/: modules.rst  thicket.external.rst  thicket.rst  thicket.stats.rst  thicket.vis.rst
examples/python_scripts/: .gitignore  display_valid_metadata_metric.py  stacked_line_charts.py  stacked_line_graphs.py  stacked_line_graphs_deepcopy.py
stats/: calc_average.py  calc_deviation.py  calc_percentiles.py  check_normality.py  display_heatmap.py  display_histogram.py
thicket/: __init__.py  ensemble.py  groupby.py  helpers.py  model_extrap.py  ncu.py  query.py  statspreference.py  thicket.py  utils.py  version.py
thicket/notebooks/: analysis.ipynb  generate_for_notebook.py
thicket/stats/: __init__.py  bhattacharyya_distance.py  calc_average.py  calc_boxplot_statistics.py  calc_corr_nodewise.py  calc_deviation.py  calc_extremum.py  calc_percentiles.py  calc_temporal_pattern.py  check_normality.py  confidence_interval.py  correlation_nodewise.py  display_boxplot.py  display_heatmap.py  display_histogram.py  display_violinplot.py  distance.py  hellinger_distance.py  maximum.py  mean.py  median.py  minimum.py  percentiles.py  preference.py  scoring.py  stats_utils.py  std.py  ttest.py  variance.py
thicket/tests/: conftest.py  reader_demo.py  test_add_root_node.py  test_caliperreader.py  test_columnar_join.py  test_concat_thickets.py  test_copy.py  test_display.py  test_ensemble.py  test_filter.py  test_filter_metadata.py  test_filter_profile.py  test_filter_stats.py  test_from_statsframes.py  test_get_node.py  test_groupby.py  test_intersection.py  test_json_interface.py  test_make_superthicket.py  test_model_extrap.py  test_pickle.py  test_query.py  test_query_stats.py  test_reader_dispatch.py  test_readers.py  test_stats.py  test_thicket.py  test_timeseries.py  test_tree.py  utils.py
thicket/tests/data/XL_BaseCuda_0128_01048576/: Base_CUDA-block_128_03.cali  XL_BaseCuda_01048576_01.cali  XL_BaseCuda_01048576_02.cali  XL_BaseCuda_01048576_03.cali  XL_BaseCuda_01048576_04.cali  XL_BaseCuda_01048576_05.cali  XL_BaseCuda_01048576_06.cali  XL_BaseCuda_01048576_07.cali  XL_BaseCuda_01048576_08.cali  XL_BaseCuda_01048576_09.cali  XL_BaseCuda_01048576_10.cali
thicket/tests/data/example-cali/: example_all_base_seq_1.cali  example_all_base_seq_2.cali  example_all_base_seq_3.cali
thicket/tests/data/example-json/: user_ensemble.json
thicket/tests/data/example-timeseries/: mem_power_timeseries.cali  memory_timeseries.cali
thicket/tests/data/misc/: 200924-17025362173.cali
thicket/vis/: __init__.py  package.json  static_fixer.py  visualizations.py  webpack.config.js
thicket/vis/scripts/: globals.js  pcp.js  scatter.js  store.js  treetable.js
thicket/vis/static/: pcp_bundle.html  pcp_bundle.js  topdown_bundle.html  topdown_bundle.js  treetable_bundle.html  treetable_bundle.js
thicket/vis/templates/: pcp.html  topdown.html  treetable.html
(+38 files in other folders)
