[metadata]
name = llnl-thicket
version =  attr: thicket.version.__version__
description = Toolkit for exploratory data analysis of ensemble performance data
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# url =
# keywords = []
# classifiers = []

[options]
packages =
    thicket
    thicket.stats
    thicket.vis
install_requires =
    scipy
    seaborn
    pydot
    matplotlib
    numpy
    pandas
    llnl-hatchet
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
