[metadata]
name = llnl-thicket
version =  attr: thicket.version.__version__
description = Toolkit for exploratory data analysis of ensemble performance data
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# url =
# keywords = []
# classifiers = []

[options]
packages =
    thicket
    thicket.stats
    thicket.vis
install_requires =
    scipy
    seaborn
    pydot
    matplotlib
    numpy
    pandas >= 1.1
    llnl-hatchet
python_requires = >=3.6.1
