[metadata]
name = llnl-thicket
version =  attr: thicket.version.__version__
description = Toolkit for exploratory data analysis of ensemble performance data
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
project_urls =
    Source Code = https://github.com/LLNL/thicket
    Documentation = https://thicket.readthedocs.io/
# keywords = []
# classifiers = []

[options]
packages =
    thicket
    thicket.stats
    thicket.vis
include_package_data = True
install_requires =
    scipy
    seaborn
    pydot
    matplotlib
    numpy
    pandas >= 1.1
    llnl-hatchet
python_requires = >=3.6.1

[options.extras_require]
extrap = extrap
